fixed dark mode inconsistencies (hopefully)

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .intromsg-dark {
     color: #F1C1BD !important;
 }
-.intromsgpartb {
+#intromsgpartb {
     height: 100vh;
     /*background: #f8e5bb;*/
     /*background-color: #F1C1BD;*/
@@ -57,7 +57,10 @@ body {
     font-size: 2.0rem;
     color: #f2ebd8;
 }
-.plan {
+.intromsgpartb-dark {
+    color: #F1C1BD !important;
+}
+#plan {
     height: 100vh;
     /*background: #f8e5bb;*/
     /*background-color: #F1C1BD;*/
@@ -69,6 +72,9 @@ body {
     font-style: normal;
     font-size: 2.0rem;
     color: #CA6D68;
+}
+.plan-dark {
+    color: #F1C1BD !important;
 }
 
 h1 {
